# so101-journal

./: .gitignore  ARM_POSE_README.md  CLAUDE.md  README.md  server.py
arm_pose/: __init__.py  overlay.py  pose_math.py
journal/: 00_intro.md  01_teleop.md  02_cam.md  03_firstpolicy.md  04_staticpickandplace.md  05_movingobject.md  06_movingobjectv2.md  07_movingobjectv3.md  08_movingobjectv4.md  09_movingobjectv5.md  0_intro.md  10_teleopdashboard.md  11_handtracking.md  12_fullmirror.md  13_inversekinematics.md  1_teleop.md  2_cam.md  3_firstpolicy.md  4_staticpickandplace.md  5_movingobject.md  6_movingobjectv2.md  7_movingobjectv3.md  8_movingobjectv4.md  9_movingobjectv5.md
rust/: Cargo.toml  README.md
rust/ff-teleop/: Cargo.toml
rust/ff-teleop/src/: calib.rs  control.rs  main.rs
rust/sts3215/: Cargo.toml
rust/sts3215/src/: bus.rs  error.rs  lib.rs  protocol.rs  registers.rs  serial.rs  transport.rs
rust/tools/: gen_golden_vectors.py
scripts/: download_models.sh  teleop.sh  video_compressor.py
static/: index.html
teleop/: README.md  __init__.py
teleop/mirror/: README.md  __init__.py  mapping.py  server.py
teleop/rl_reach/: README.md  __init__.py  eval_reach.py  fk.py  so101_reach_env.py  train_reach.py  viz_server.py
teleop/robot/: README.md  __init__.py  control.py  ik_service.py  kinematics.py  server.py
teleop/scripts/: cam_viz.py
teleop/tests/: test_pose_math.py
teleop/vision/: README.md  __init__.py  camera.py  camera_feed.py  pose_math.py  server.py  smoothing.py  tracker.py
tests/: test_pose_math.py
(+6 files in other folders)
