[package]
name = "ff-teleop"
version = "0.1.0"
description = "Bilateral force-feedback teleoperation for the SO-101"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sts3215.workspace = true
clap.workspace = true
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
